cloudformation/network.yml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: "default"
      Tags:
        - Key: "Name"
          Value: "prepan"

  # Public Subnet configuration for publishing applications
  PublicSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: false
      AvailabilityZone: us-west-1b
      Tags:
        - Key: "Name"
          Value: "prepan-public"
      VpcId: !Ref VPC
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key: "Name"
        Value: "prepan-gateway"
  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "prepan-public-route"
  AddInternetGatewayToPublicRouteTable:
    Type: "AWS::EC2::Route"
    DependsOn: AttachGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  AttachPublicRouteTableToPublicSubnet:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  # Private Subnet (for DB server)
  # Two subnets with different AZ are required to create db subnet group
  PrivateSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.2.0/24"
      AvailabilityZone: us-west-1b
      Tags:
        - Key: "Name"
          Value: "prepan-private1"
      VpcId: !Ref VPC
  PrivateSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.3.0/24"
      AvailabilityZone: us-west-1c
      Tags:
        - Key: "Name"
          Value: "prepan-private2"
      VpcId: !Ref VPC

  AppServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: "prepan-app-sg"
      GroupDescription: "prepan-app-sg SecurityGroup for app-server instance in public-subnet"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: "SSH"
          FromPort: 22
          IpProtocol: "tcp"
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: "HTTP"
          FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80
      VpcId: !Ref VPC

Outputs:
  PublicSubnet:
    Value: !Ref PublicSubnet
    Export:
      Name: prepan:PublicSubnet
  PrivateSubnet1:
    Value: !Ref PrivateSubnet1
    Export:
      Name: prepan:PrivateSubnet1
  PrivateSubnet2:
    Value: !Ref PrivateSubnet2
    Export:
      Name: prepan:PrivateSubnet2
  AppServerSecurityGroup:
    Value: !Ref AppServerSecurityGroup
    Export:
      Name: prepan:AppServerSecurityGroup
